--- a/.gitignore
+++ b/.gitignore
@@ -24,5 +24,5 @@ yarn-error.log*
 .eslintcache
 .idea
 
-storybook-webpack-config.json
-build-storybook.log
+/storybook-webpack-config.json
+/build-storybook.log
