--- a/package.json
+++ b/package.json
@@ -90,7 +90,9 @@
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
     "test": "node scripts/test.js",
-    "chromatic": "npx chromatic --project-token 722bf70a3f9c"
+    "chromatic": "npx chromatic --project-token 722bf70a3f9c",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook"
   },
   "browserslist": {
     "production": [
@@ -105,11 +107,18 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-transform-runtime": "^7.13.10",
+    "@babel/preset-env": "^7.13.12",
+    "@storybook/addon-actions": "^6.2.3",
+    "@storybook/addon-essentials": "^6.2.3",
+    "@storybook/addon-links": "^6.2.3",
+    "@storybook/react": "^6.2.3",
     "@types/lodash-es": "^4.17.4",
     "@types/qs": "^6.9.5",
     "@types/react-router-config": "^5.0.2",
     "@types/react-router-dom": "^5.1.7",
-    "chromatic": "^5.7.0"
+    "chromatic": "^5.7.0",
+    "webpack-node-externals": "^2.5.2"
   },
   "jest": {
     "roots": [
@@ -162,11 +171,6 @@
       "jest-watch-typeahead/testname"
     ],
     "resetMocks": true
-  },
-  "babel": {
-    "presets": [
-      "react-app"
-    ]
   },
   "eslintConfig": {
     "extends": "react-app"
