--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "bfj": "^7.0.2",
     "camelcase": "^6.1.0",
     "case-sensitive-paths-webpack-plugin": "2.3.0",
+    "cpr": "^3.0.1",
     "craco-antd": "^1.19.0",
     "craco-less": "^1.17.1",
     "css-loader": "4.3.0",
@@ -90,10 +91,12 @@
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
     "test": "node scripts/test.js",
+    "build:types": "tsc -p tsconfig.build.json && cpr lib esm -d -o",
     "chromatic": "npx chromatic --project-token 722bf70a3f9c",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook"
   },
+  "typings": "lib/index.d.ts",
   "browserslist": {
     "production": [
       ">0.2%",
