--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@ant-design/icons": "^4.3.0",
     "@babel/core": "7.12.3",
+    "@babel/runtime": "^7.13.10",
     "@craco/craco": "^6.0.0",
     "@pmmmwh/react-refresh-webpack-plugin": "0.4.2",
     "@svgr/webpack": "5.4.0",
@@ -74,6 +75,7 @@
     "react-router-dom": "^5.2.0",
     "resolve": "1.18.1",
     "resolve-url-loader": "^3.1.2",
+    "rimraf": "^3.0.2",
     "sass-loader": "8.0.2",
     "semver": "7.3.2",
     "style-loader": "1.3.0",
@@ -91,7 +93,9 @@
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
     "test": "node scripts/test.js",
-    "build:types": "tsc -p tsconfig.build.json && cpr lib esm -d -o",
+    "build:types": "tsc -p tsconfig.build.json && cpr lib esm",
+    "clean": "rimraf lib esm",
+    "gulp": "npm run clean && npm run build:types && gulp",
     "chromatic": "npx chromatic --project-token 722bf70a3f9c",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook"
@@ -110,8 +114,11 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-proposal-class-properties": "^7.13.0",
     "@babel/plugin-transform-runtime": "^7.13.10",
     "@babel/preset-env": "^7.13.12",
+    "@babel/preset-react": "^7.13.13",
+    "@babel/preset-typescript": "^7.13.0",
     "@storybook/addon-actions": "^6.2.3",
     "@storybook/addon-essentials": "^6.2.3",
     "@storybook/addon-links": "^6.2.3",
@@ -121,6 +128,8 @@
     "@types/react-router-config": "^5.0.2",
     "@types/react-router-dom": "^5.1.7",
     "chromatic": "^5.7.0",
+    "gulp": "^4.0.2",
+    "gulp-babel": "^8.0.0",
     "webpack-node-externals": "^2.5.2"
   },
   "jest": {
